--- a/src/Dita/TrackingBundle/Resources/views/Address/edit.html.twig
+++ b/src/Dita/TrackingBundle/Resources/views/Address/edit.html.twig
@@ -3,5 +3,5 @@
 {% block title %}DitaTrackingBundle:Address:edit{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Address:edit page</h1>
+{{ form(form) }}
 {% endblock %}
